Fixed more alignment problems - 2

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -109,7 +109,7 @@ a:hover
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
+  min-width: 100%;
 }
 
 .column {
@@ -167,7 +167,7 @@ button{
   background-size: contain;
   top: 0px;
   left: 0px;
-  width: 100;
+  min-width: 100;
   min-height: 100vh;
   display: flex;
   justify-content: space-evenly;
